# phantom-lock-defence-system

./: .gitignore  CMakeLists.txt  Map.qml  dashboardwindow.ui  dashboardwindow.ui.autosave  main.cpp  resources.qrc
model/: mapobject.cpp  mapobject.h
network/: basereceiver.cpp  basereceiver.h  tcpreceiver.cpp  tcpreceiver.h  udpreceiver.cpp  udpreceiver.h
presentation/component/: alarmdetail.cpp  alarmdetail.h  topbar.cpp  topbar.h  vehicledetail.cpp  vehicledetail.h
presentation/component/map/: Map.qml  mapmarker.cpp  mapmarker.h
presentation/screen/: dashboardwindow.cpp  dashboardwindow.h
presentation/state/: dashboardstate.cpp  dashboardstate.h
presentation/ui/: alarmdetail.ui  dashboardwindow.ui  topbar.ui  vehicledetail.ui
presentation/viewmodel/: dashboardviewmodel.cpp  dashboardviewmodel.h
